[project]
name = "doing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainladder>=0.8.26",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=5.0.0",
    "pymacro>=0.1.1",
    "streamlit>=1.28.0",
]

[tool.uv.workspace]
members = [
    "app",
]
